--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.26.18",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
     "uuid": "^13.0.0"
