--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,3 +19,20 @@ buildscript {
 }
 
 apply plugin: "com.facebook.react.rootproject"
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        maven {
+            url "https://api.mapbox.com/downloads/v2/releases/maven"
+            authentication {
+                basic(BasicAuthentication)
+            }
+            credentials {
+                username = "mapbox"
+                password = "sk.eyJ1IjoiYW50b3NrdXUiLCJhIjoiY21oeGJramI0MDBubTJrczk1NXpidXBxMSJ9.BKTie0cXt9SP2dGAmoyddA"
+            }
+        }
+    }
+}
