--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.4.8",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
+    "@rnmapbox/maps": "^10.2.7",
     "react": "19.1.0",
     "react-native": "0.81.1",
     "react-native-get-random-values": "^1.11.0",
